--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<main>
 		<a href="">- Programação Web</a>
 		<br>
-		<a href="">- game</a>
+		<a href="">- Project Game</a>
 		</main>
 	</body>
 </html>
