--- a/Programaçao-web/src/Index.html
+++ b/Programaçao-web/src/Index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>Projetos Web - Dante</title>
+		<title>Programação Web </title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#000">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="../style.css">
+		<link rel="shortcut icon" href="">
 	</head>
 	<body>
 		<main>
-		<a href="/src/Index.html">- Programação Web</a>
+		<a href="Curso-web-fundamentos/index.html">-Curso-web-fundamentos</a>
 		<br>
-		<a href="">- Project Game</a>
+		<a href="Fashion/index.html">-Fashion</a>
+		<br>
 		</main>
 	</body>
 </html>
