--- a/Project-game/index.html
+++ b/Project-game/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>Projetos Web - Dante</title>
+		<title>Project-Game</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#000">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="../style.css">
+		<link rel="shortcut icon" href="">
 	</head>
 	<body>
 		<main>
-		<a href="/src/Index.html">- Programação Web</a>
+		<a href="Project-game/Mario/index.html">-Mario</a>
 		<br>
-		<a href="">- Project Game</a>
+	
 		</main>
 	</body>
 </html>
