--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<main>
-		<a href="/src/Index.html">- Programação Web</a>
+		<a href="Programaçao-web/src/Index.html">- Programação Web</a>
 		<br>
-		<a href="">- Project Game</a>
+		<a href="/Project-game/Mario/index.html">- Project Game</a>
 		</main>
 	</body>
 </html>
