--- a/Programaçao-web/src/Index.html
+++ b/Programaçao-web/src/Index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<main>
-		<a href="/Curso-web-fundamentos/index.html/index.html">-Curso-web-fundamentos</a>
+		<a href="Curso-web-fundamentos/index.html">-Curso-web-fundamentos</a>
 		<br>
 		<a href="Fashion/index.html">-Fashion</a>
 		<br>
