Correção de pastas

--- a/ProgramacaoWeb/index.html
+++ b/ProgramacaoWeb/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>Project-Game</title>
+		<title>Programação Web </title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#000">
@@ -10,9 +10,10 @@
 	</head>
 	<body>
 		<main>
-		<a href="Project-game/Mario/index.html">-Mario</a>
+		<a href="Curso-Web-Fundamentos/index.html">- Curso Web-fundamentos</a>
 		<br>
-	
+		<a href="Fashion/index.html">- Fashion</a>
+		<br>
 		</main>
 	</body>
 </html>
