--- a/ProjectGame/index.html
+++ b/ProjectGame/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>Programação Web </title>
+		<title>Project-Game</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#000">
@@ -10,10 +10,9 @@
 	</head>
 	<body>
 		<main>
-		<a href="Curso-web-fundamentos/index.html">-Curso-web-fundamentos</a>
+		<a href="Mario/index.html">- Mario</a>
 		<br>
-		<a href="Fashion/index.html">-Fashion</a>
-		<br>
+	
 		</main>
 	</body>
 </html>
