--- a/ProgramacaoWeb/Curso-Web-Fundamentos/index.html
+++ b/ProgramacaoWeb/Curso-Web-Fundamentos/index.html
@@ -11,18 +11,19 @@
 
 <link rel="stylesheet" href="estilo.css">
 
-        <header class="hero">
-            <nav>
-                <ul> <li><a href="index.html">inicio</a></li>
-                <li> <a href="#">Projetos</a></li>
-                    <li><a href="#">Quem Sou</a></li></ul>
-            </nav>
-        
-  <div class="hero-content">
-   <h1>Curso Web Fundamentos</h1>
-   <p>Aprenda HRTML, CSS e Javascript</p>
-</div></header>
-
+<header class="hero">
+	<nav>
+		<ul>
+			<li><a href="index.html">inicio</a></li>
+			<li><a href="#">Projetos</a></li>
+			<li><a href="#">Quem Sou</a></li>
+		</ul>
+	</nav>
+	<div class="hero-content">
+		<h1>Curso Web Fundamentos</h1>
+		<p>Aprenda HRTML, CSS e Javascript</p>
+	</div>
+</header>
 
 <main>
     <section class="content-selection">
