--- a/ProgramacaoWeb/index.html
+++ b/ProgramacaoWeb/index.html
@@ -10,11 +10,11 @@
 	</head>
 	<body>
 		<main>
-		<a href="Curso-Web-Fundamentos/index.html">- Curso Web-fundamentos</a>
-		<br>
-		<a href="Fashion/index.html">- Fashion</a>
-		<br>
-		<a href="/ProgramacaoWeb/Netflix/Usuarios/index.html">Netflix</a>
+			<a href="Curso-Web-Fundamentos/index.html">- Curso Web-fundamentos</a>
+			<br>
+			<a href="Fashion/index.html">- Fashion</a>
+			<br>
+			<a href="/ProgramacaoWeb/Netflix/Usuarios/index.html">-Netflix</a>
 		</main>
 	</body>
 </html>
