--- a/ProgramacaoWeb/Netflix/Usuarios/index.html
+++ b/ProgramacaoWeb/Netflix/Usuarios/index.html
@@ -19,23 +19,23 @@
                 <div class="lista-perfis">
                     <h1>Quem está assistindo?</h1>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="../img/Usuario-1.png">
+                        <img src="img/Usuario-1.png">
                         <p>Ronaldo</p>
                     </a>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="../img/Usuario-2.png">
+                        <img src="img/Usuario-2.png">
                         <p>Thiago Solfo</p>
                     </a>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="../img/Usuario-3.png">
+                        <img src="img/Usuario-3.png">
                         <p>Melina</p>
                     </a>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="../img/Usuario-4.png">
+                        <img src="img/Usuario-4.png">
                         <p>Dante</p>
                     </a>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="../img/Usuario-5.png">
+                        <img src="img/Usuario-5.png">
                         <p>Romero Brito</p>
                     </a>
                 </div>
