--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<main>
-		<a href="ProgramacaoWeb/index.html">- Programação Web</a>
+		<a href="ProgramacaoWeb/index.html">- Programação-Web</a>
 		<br>
-		<a href="ProjectGame/index.html">- Project Game</a>
+		<a href="ProjectGame/index.html">- Project-Game</a>
 		</main>
 	</body>
 </html>
