--- a/ProgramacaoWeb/Netflix/index.html
+++ b/ProgramacaoWeb/Netflix/index.html
@@ -11,7 +11,7 @@
     <body>
         <!-- Barra de navegação -->
         <header>
-            <img src="../img/Netflix-Logo.png" alt="Netflix" class="logo">
+            <img src="/ProgramacaoWeb/Netflix/img/Netflix-Logo.png" alt="Netflix" class="logo">
         </header>
         <!-- Painel central -->
         <div class="perfis-container">
