--- a/ProgramacaoWeb/index.html
+++ b/ProgramacaoWeb/index.html
@@ -14,7 +14,7 @@
 			<br>
 			<a href="Fashion/index.html">- Fashion</a>
 			<br>
-			<a href="Netflix/index.html">- Netflix</a>
+			<a href="/ProgramacaoWeb/Netflix/index.html">- Netflix</a>
 		</main>
 	</body>
 </html>
