--- a/ProgramacaoWeb/Netflix/index.html
+++ b/ProgramacaoWeb/Netflix/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="style.css" rel="stylesheet">
-        <link rel="shortcut icon" href="../img/favicon.ico">
+        <link rel="shortcut icon" href="img/favicon.ico">
         <title>Netflix</title>
     </head>
     <body>
         <!-- Barra de navegação -->
         <header>
-            <img src="/ProgramacaoWeb/Netflix/img/Netflix-Logo.png" alt="Netflix" class="logo">
+            <img src="img/NetflixLogo.png" alt="Netflix" class="logo">
         </header>
         <!-- Painel central -->
         <div class="perfis-container">
@@ -19,23 +19,23 @@
                 <div class="lista-perfis">
                     <h1>Quem está assistindo?</h1>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="/ProgramacaoWeb/Netflix/img/Usuario-1.png">
+                        <img src="img/Usuario1.png">
                         <p>Ronaldo</p>
                     </a>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="/ProgramacaoWeb/Netflix/img/Usuario-2.png">
+                        <img src="img/Usuario2.png">
                         <p>Thiago Solfo</p>
                     </a>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="/ProgramacaoWeb/Netflix/img/Usuario-3.png">
+                        <img src="img/Usuario3.png">
                         <p>Melina</p>
                     </a>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="/ProgramacaoWeb/Netflix/img/Usuario-4.png">
+                        <img src="img/Usuario4.png">
                         <p>Dante</p>
                     </a>
                     <a href="../Menu/index.html" class="usuario">
-                        <img src="/ProgramacaoWeb/Netflix/img/Usuario-5.png">
+                        <img src="img/Usuario5.png">
                         <p>Romero Brito</p>
                     </a>
                 </div>
