--- a/ProgramacaoWeb/index.html
+++ b/ProgramacaoWeb/index.html
@@ -10,11 +10,11 @@
 	</head>
 	<body>
 		<main>
-			<a href="Curso-Web-Fundamentos/index.html">- Web-fundamentos</a>
-			<br>
-			<a href="Fashion/index.html">- Fashion</a>
-			<br>
-			<a href="Netflix/index.html">- Netflix</a>
+			<div class="content">
+				<a href="Curso-Web-Fundamentos/index.html">> Web-fundamentos</a>
+				<a href="Fashion/index.html">> Fashion</a>
+				<a href="Netflix/index.html">> Netflix</a>
+			</div>
 		</main>
 	</body>
 </html>
