--- a/ProjectGame/index.html
+++ b/ProjectGame/index.html
@@ -10,9 +10,9 @@
 	</head>
 	<body>
 		<main>
-		<a href="Mario/index.html">- Mario</a>
-		<br>
-	
+			<div class="content">
+				<a href="Mario/index.html">> Mario</a>
+			</div>
 		</main>
 	</body>
 </html>
