--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>Projetos Web - Dante</title>
+		<title>Dante | Projetos Web</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#000">
@@ -9,9 +9,10 @@
 	</head>
 	<body>
 		<main>
-		<a href="ProgramacaoWeb/index.html">- Programação-Web</a>
-		<br>
-		<a href="ProjectGame/index.html">- Project-Game</a>
+			<div class="content">
+				<a href="ProgramacaoWeb/index.html">> Programação Web</a>
+				<a href="ProjectGame/index.html">> Project-Game</a>
+			</div>
 		</main>
 	</body>
 </html>
