Mudança de design, correções e melhorias
• Design da página inicial alterado com novos ícones e animação de fade-in.

• Indentação e pequenos erros corrigidos.

• Melhorias de semântica e padronização.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<title>Dante | Projetos Web</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="theme-color" content="#000">
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<main>
-			<div class="content">
-				<a href="ProgramacaoWeb/index.html">> Programação Web</a>
-				<a href="ProjectGame/index.html">> Project-Game</a>
+
+<head>
+	<title>Dante | Projetos Web</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#000">
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<main>
+		<div class="content">
+			<div class="folder">
+				<div class="title">
+					<p>
+						<img class="icon" src="img/folder.svg">
+						Programação Web
+					</p>
+				</div>
+				<div class="item">
+					<a href="ProgramacaoWeb/Curso-Web-Fundamentos/index.html">
+						<img class="icon" src="img/file-lines.svg">
+						Web-fundamentos
+					</a>
+				</div>
+				<div class="item">
+					<a href="ProgramacaoWeb/Fashion/index.html">
+						<img class="icon" src="img/file-lines.svg">
+						Fashion
+					</a>
+				</div>
+				<div class="item">
+					<a href="ProgramacaoWeb/Netflix/index.html">
+						<img class="icon" class="icon" src="img/file-lines.svg">
+						Netflix
+					</a>
+				</div>
 			</div>
-		</main>
-	</body>
+			<div class="folder">
+				<div class="title">
+					<p>
+						<img class="icon" src="img/folder.svg">
+						Project Game
+					</p>
+				</div>
+				<div class="item">
+					<a href="ProjectGame/Mario/index.html">
+						<img class="icon" src="img/file-lines.svg">
+						Mario
+					</a>
+				</div>
+			</div>
+		</div>
+		<!--<dl>
+				<dt>Programação Web</dt>
+				<dd>Web-fundamentos</dd>
+				<dd>Fashion</dd>
+				<dd>Netflix</dd>
+				<dt>Project-Game</dt>
+				<dd>Mario</dd>
+			</dl>-->
+	</main>
+</body>
+
 </html>
