--- a/ProgramacaoWeb/index.html
+++ b/ProgramacaoWeb/index.html
@@ -15,6 +15,8 @@
 			<a href="Fashion/index.html">- Fashion</a>
 			<br>
 			<a href="Netflix/index.html">- Netflix</a>
+			<br>
+			<a href="Tabela/index.html">- Tabela</a>
 		</main>
 	</body>
 </html>
