--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
 				</div>
 				<div class="item">
 					<a href="ProgramacaoWeb/Netflix/index.html">
-						<img class="icon" class="icon" src="img/file-lines.svg">
+						<img class="icon" src="img/file-lines.svg">
 						Netflix
 					</a>
 				</div>
+				<div class="item">
+					<a href="ProgramacaoWeb/Tabela/index.html">
+					<img class="icon" src="img/file-lines.svg">
+				 Tabela
+				</a>
+				</div>
+
 			</div>
 			<div class="folder">
 				<div class="title">
