--- a/ProgramacaoWeb/Tabela/index.html
+++ b/ProgramacaoWeb/Tabela/index.html
@@ -21,40 +21,39 @@
         </thead>
         <tfoot>
             <tr>
-            <td colspan="3">Valores sujeitos a alteraçoes sem prévio aviso
-            </td>
+                <td colspan="3">Valores sujeitos a alteraçoes sem prévio aviso
+                </td>
             </tr>
-         </tfoot>
-            <tbody>
-                <tr>
-                    <td rowspan="3">Designe</td>
-                    <td>InDesign</td>
-                    <td>R$1.000.00</td>
-                </tr>
-                <tr>
-                   
-                    <td>Photoshop</td>
-                    <td>R$1.000.00</td>
-                </tr>
-                <tr>
-                    
-                    <td>3D Max</td>
-                    <td>R$1.000.00</td>
-                </tr>
-                <tr>
-                    <td rowspan="3">Developent</td>
-                    <td>JavaScript</td>
-                    <td>R$1.000.00</td>
-                </tr>
-                <tr>  
-                    <td>CSS</td>
-                    <td>R$1.000.00</td>
-                </tr>
-                <tr>
-                    <td>HTML</td>
-                    <td>R$1.000.00</td>
-                </tr>
-            </tbody>
+        </tfoot>
+        <tbody>
+            <tr>
+                <td rowspan="3">Designe</td>
+                <td>InDesign</td>
+                <td>R$1.000.00</td>
+            </tr>
+            <tr>
+
+                <td>Photoshop</td>
+                <td>R$1.000.00</td>
+            </tr>
+            <tr>
+                <td>3D Max</td>
+                <td>R$1.000.00</td>
+            </tr>
+            <tr>
+                <td rowspan="3">Development</td>
+                <td>JavaScript</td>
+                <td>R$1.000.00</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>R$1.000.00</td>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td>R$1.000.00</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 
