Adaptação dos projetos para cards
• Cards de pré-visualização adicionados (sem uso atual);

• Projeto "Fashion" melhorado para ser mais responsivo e possibilitar a screenshot do card de 1000x1000;

• Agora o projeto "Mario" pode ser jogado em offline quando baixado uma vez que os sprites foram adicionados à pasta nesta versão.

--- a/ProjectGame/Mario/index.html
+++ b/ProjectGame/Mario/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <title>Mario Kaboom.js</title>
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
-    <script src="game.js"></script>
+    <script src="js/kaboom.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
