adiçao do  formulario e do site-header

--- a/ProgramacaoWeb/site-header/index.html
+++ b/ProgramacaoWeb/site-header/index.html
@@ -32,6 +32,51 @@
 
     </section>
 
+    <section class="main-content-section">
+        <h3>Recente Works</h3>
+        <article class="recente-works-card"> 
+            <a href="../img/01.jpg"></a>
+            <img src="/ProgramacaoWeb/site-header/img/01.jpg" alt="descriçao">
+            <p class="recent-works-cards-title"> Magna sed consequat tempus </p>
+              <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+        </article>
+        <article class="recente-works-card"> 
+            <a href="../img/02.jpg"></a>
+            <img src="/ProgramacaoWeb/site-header/img/02.jpg" alt="descriçao">
+            <p class="recent-works-cards-title">  Ultricies lacinia interdum</p>
+              <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+        </article>
+
+        <article class="recente-works-card"> 
+            <a href="../img/03.jpg"></a>
+            <img src="/ProgramacaoWeb/site-header/img/03.jpg" alt="descriçao">
+            <p class="recent-works-cards-title">  Tortor metus commodo </p>
+              <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+        </article>
+
+        <article class="recente-works-card"> 
+            <a href="../img/04.jpg"></a>
+            <img src="/ProgramacaoWeb/site-header/img/04.jpg" alt="descriçao">
+            <p class="recent-works-cards-title">  Quam neque phasellus</p>
+              <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+        </article>
+        <article class="recente-works-card"> 
+            <a href="../img/05.jpg"></a>
+            <img src="/ProgramacaoWeb/site-header/img/05.jpg" alt="descriçao">
+            <p class="recent-works-cards-title">  Nunc en commodo aliquet</p>
+              <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+        </article>
+
+        <article class="recente-works-card"> 
+            <a href="../img/06.jpg"></a>
+            <img src="/ProgramacaoWeb/site-header/img/06.jpg" alt="descriçao">
+            <p class="recent-works-cards-title">  Risus ornare lacinia </p>
+              <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+        </article>
+
+
+    </section>
+
     <footer class="main-footer"></footer>
     
 </body>
