--- a/ProgramacaoWeb/site-header/index.html
+++ b/ProgramacaoWeb/site-header/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="main-header">
         <a href="index.html" class="main-header-link imagem-link">
-             <img src="/ProgramacaoWeb/site-header/img/avatar.jpg" alt="texto qualquer">
+             <img src="img/avatar.jpg" alt="texto qualquer">
         </a>
         <h1 class="main-header-title"> Trabalhos e groselhas de <br>
            <strong>  Dante </strong>
@@ -45,20 +45,20 @@
             <div class="col-2">
         <article class="recente-works-card"> 
             <a class="imagem-link" href="../img/01.jpg"></a>
-            <img src="/ProgramacaoWeb/site-header/img/thumbs/01.jpg" alt="descriçao">
+            <img src="img/thumbs/01.jpg" alt="descriçao">
             <p class="recent-works-cards-title"> Magna sed consequat tempus </p>
               <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
         </article>
         <article class="recente-works-card"> 
             <a class="imagem-link" href="../img/02.jpg"></a>
-            <img src="/ProgramacaoWeb/site-header/img/thumbs/02.jpg" alt="descriçao">
+            <img src="img/thumbs/02.jpg" alt="descriçao">
             <p class="recent-works-cards-title">  Ultricies lacinia interdum</p>
               <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
         </article>
 
         <article class="recente-works-card"> 
             <a class="imagem-link" href="../img/03.jpg"></a>
-            <img src="/ProgramacaoWeb/site-header/img/thumbs/03.jpg" alt="descriçao">
+            <img src="img/thumbs/03.jpg" alt="descriçao">
             <p class="recent-works-cards-title">  Tortor metus commodo </p>
               <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
         </article>
@@ -68,20 +68,20 @@
 
         <article class="recente-works-card"> 
             <a class="imagem-link" href="../img/04.jpg"></a>
-            <img src="/ProgramacaoWeb/site-header/img/thumbs/04.jpg" alt="descriçao">
+            <img src="img/thumbs/04.jpg" alt="descriçao">
             <p class="recent-works-cards-title">  Quam neque phasellus</p>
               <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
         </article>
         <article class="recente-works-card"> 
             <a class="imagem-link" href="../img/05.jpg"></a>
-            <img src="/ProgramacaoWeb/site-header/img/thumbs/05.jpg" alt="descriçao">
+            <img src="img/thumbs/05.jpg" alt="descriçao">
             <p class="recent-works-cards-title">  Nunc en commodo aliquet</p>
               <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
         </article>
 
         <article class="recente-works-card"> 
             <a class="imagem-link" href="../img/06.jpg"></a>
-            <img src="/ProgramacaoWeb/site-header/img/thumbs/06.jpg"alt="descriçao">
+            <img src="img/thumbs/06.jpg"alt="descriçao">
             <p class="recent-works-cards-title">  Risus ornare lacinia </p>
               <p> Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
         </article>
@@ -366,19 +366,19 @@
         <h3>Imagens</h3>
 
         <div class="gallery-img">
-            <img src="/ProgramacaoWeb/site-header/img/fulls/01.jpg" alt="">
+            <img src="img/fulls/01.jpg" alt="">
 
         </div>
         <div class="gallery-thumb row">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/01.jpg" alt="">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/02.jpg" alt="">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/03.jpg" alt="">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/04.jpg" alt="">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/05.jpg" alt="">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/06.jpg" alt="">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/03.jpg" alt="">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/02.jpg" alt="">
-            <img class="col-1-3" src="/ProgramacaoWeb/site-header/img/thumbs/01.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/01.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/02.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/03.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/04.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/05.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/06.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/03.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/02.jpg" alt="">
+            <img class="col-1-3" src="img/thumbs/01.jpg" alt="">
         </div>
         
    
