Início da renovação do projeto "Mario".
Com o update mais recente do kaboom.js, o projeto em sua forma atual não funciona mais e é necessário refazê-lo.

Os sprites foram atualizados e extraídos dos sprites em sua resolução original de 16x16 pixels com o palette FCEUX.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
 						Mario
 					</a>
 				</div>
+				<div class="item">
+					<a href="ProjectGame/Mario Updated/index.html">
+						<img class="icon" src="img/file-lines.svg">
+						Mario Updated
+					</a>
+				</div>
 			</div>
 		</div>
 	</main>
