--- a/ProjectGame/Mario Updated/index.html
+++ b/ProjectGame/Mario Updated/index.html
@@ -1,15 +1,11 @@
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
-    <title>Mario Kaboom.js</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <title>Mario Updated | Kaboom.js</title>
+    <link rel="icon" type="image/png" href="img/mario.png" />
   </head>
-  <body>
+
+  <body style="margin: 0; overflow: hidden">
     <script src="js/kaboom-v2000.2.9.js"></script>
     <script src="js/script.js"></script>
   </body>
