Tabulação e nova linha ao fim
- Todos os indexes foram alterados para manter a tabulação de 4 para 2

--- a/ProgramacaoWeb/Netflix/index.html
+++ b/ProgramacaoWeb/Netflix/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <title>Netflix</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <title>Netflix</title>
 </head>
 
 <body>
-    <!-- Barra de navegação -->
-    <header>
-        <img src="img/NetflixLogo.png" alt="Netflix" class="logo">
-    </header>
-    <!-- Painel central -->
-    <div class="perfis-container">
-        <div class="div-centralizado">
-            <div class="lista-perfis">
-                <h1>Quem está assistindo?</h1>
-                <a href="../Menu/index.html" class="usuario">
-                    <img src="img/Usuario1.png">
-                    <p>Ronaldo</p>
-                </a>
-                <a href="../Menu/index.html" class="usuario">
-                    <img src="img/Usuario2.png">
-                    <p>Thiago Solfo</p>
-                </a>
-                <a href="../Menu/index.html" class="usuario">
-                    <img src="img/Usuario3.png">
-                    <p>Melina</p>
-                </a>
-                <a href="../Menu/index.html" class="usuario">
-                    <img src="img/Usuario4.png">
-                    <p>Dante</p>
-                </a>
-                <a href="../Menu/index.html" class="usuario">
-                    <img src="img/Usuario5.png">
-                    <p>Romero Brito</p>
-                </a>
-            </div>
-            <a href="#" class="botao-gerenciar">Gerenciar perfis</a>
-        </div>
+  <!-- Barra de navegação -->
+  <header>
+    <img src="img/NetflixLogo.png" alt="Netflix" class="logo">
+  </header>
+  <!-- Painel central -->
+  <div class="perfis-container">
+    <div class="div-centralizado">
+      <div class="lista-perfis">
+        <h1>Quem está assistindo?</h1>
+        <a href="../Menu/index.html" class="usuario">
+          <img src="img/Usuario1.png">
+          <p>Ronaldo</p>
+        </a>
+        <a href="../Menu/index.html" class="usuario">
+          <img src="img/Usuario2.png">
+          <p>Thiago Solfo</p>
+        </a>
+        <a href="../Menu/index.html" class="usuario">
+          <img src="img/Usuario3.png">
+          <p>Melina</p>
+        </a>
+        <a href="../Menu/index.html" class="usuario">
+          <img src="img/Usuario4.png">
+          <p>Dante</p>
+        </a>
+        <a href="../Menu/index.html" class="usuario">
+          <img src="img/Usuario5.png">
+          <p>Romero Brito</p>
+        </a>
+      </div>
+      <a href="#" class="botao-gerenciar">Gerenciar perfis</a>
     </div>
+  </div>
 </body>
 
 </html>
