--- a/ProgramacaoWeb/Site-Porsche/index.html
+++ b/ProgramacaoWeb/Site-Porsche/index.html
@@ -1,84 +1,85 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Porsche</title>
-    <link href="style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Porsche</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="cabecario">
-                <ul>
-                    <div class="carro-1">
-                        <img src="../Site-Porsche/img/718.jpg" alt="Porsche 718">
-                        <li>718</li>
-                    </div>
-                    <div class="carro-2">
-                        <img src="../Site-Porsche/img/911.jpg" alt="Porsche 911">
-                        <li>911</li>
-                    </div>
-                    <div class="carro-3">
-                        <img src="../Site-Porsche/img/taycan.jpg" alt="Porsche Taycan">
-                        <li>Taycan</li>
-                    </div>
-                    <div class="carro-4">
-                        <img src="../Site-Porsche/img/panamera.jpg" alt="Porsche Panamera">
-                        <li>Panamera</li>
-                    </div>
-                    <div class="carro-5">
-                        <img src="../Site-Porsche/img/macan.jpg" alt="Porsche Macan">
-                        <li>Macan
-                        <li>
-                    </div>
-                    <div class="carro-6">
-                        <img src="../Site-Porsche/img/cayenne.jpg" alt="Porsche Cayenne">
-                        <li>Cayenne</li>
-                    </div>
-            </div>
-            <div>
-                <ul>
-                    <li>Shop</li>
-                    <li>Porsche Center</li>
-                    <li>...</li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <article class="banner">
-        <div>
-            <div class="banner-image-1">
-                <h1>Impulso que nos move.</h1>
-                <h2>Panamera 4S E-Hybrid.</h2>
-            </div>
-            <div class="banner-image-2">
-                <h1>Máquina atemporal. </h1>
-                <h2>911 Carrera.</h2>
-            </div>
-            <div class="banner-image-3">
-                <h1>Esportividade compartilhada.</h1>
-                <h2>Cayenne Turbo.</h2>
-            </div>
-            <div class="banner-image-4">
-                <h1>Soul, electrified.</h1>
-                <h2>Taycan.</h2>
-            </div>
-        </div>
-        <ul class="pontos">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+  <header>
+    <nav>
+      <div class="cabecario">
+        <ul>
+          <div class="carro-1">
+            <img src="../Site-Porsche/img/718.jpg" alt="Porsche 718">
+            <li>718</li>
+          </div>
+          <div class="carro-2">
+            <img src="../Site-Porsche/img/911.jpg" alt="Porsche 911">
+            <li>911</li>
+          </div>
+          <div class="carro-3">
+            <img src="../Site-Porsche/img/taycan.jpg" alt="Porsche Taycan">
+            <li>Taycan</li>
+          </div>
+          <div class="carro-4">
+            <img src="../Site-Porsche/img/panamera.jpg" alt="Porsche Panamera">
+            <li>Panamera</li>
+          </div>
+          <div class="carro-5">
+            <img src="../Site-Porsche/img/macan.jpg" alt="Porsche Macan">
+            <li>Macan
+            <li>
+          </div>
+          <div class="carro-6">
+            <img src="../Site-Porsche/img/cayenne.jpg" alt="Porsche Cayenne">
+            <li>Cayenne</li>
+          </div>
+      </div>
+      <div>
+        <ul>
+          <li>Shop</li>
+          <li>Porsche Center</li>
+          <li>...</li>
         </ul>
-    </article>
+      </div>
+    </nav>
+  </header>
 
-    <main>
-        <p>Models</p>
-    </main>
+  <article class="banner">
+    <div>
+      <div class="banner-image-1">
+        <h1>Impulso que nos move.</h1>
+        <h2>Panamera 4S E-Hybrid.</h2>
+      </div>
+      <div class="banner-image-2">
+        <h1>Máquina atemporal. </h1>
+        <h2>911 Carrera.</h2>
+      </div>
+      <div class="banner-image-3">
+        <h1>Esportividade compartilhada.</h1>
+        <h2>Cayenne Turbo.</h2>
+      </div>
+      <div class="banner-image-4">
+        <h1>Soul, electrified.</h1>
+        <h2>Taycan.</h2>
+      </div>
+    </div>
+    <ul class="pontos">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </article>
+
+  <main>
+    <p>Models</p>
+  </main>
 </body>
+
 </html>
