--- a/ProgramacaoWeb/formulario/index.html
+++ b/ProgramacaoWeb/formulario/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 
-    <link rel="stylesheet" href="../formulario/style.css">
+  <link rel="stylesheet" href="../formulario/style.css">
 </head>
+
 <body>
-   <form action="#" method="post" class="formlogin">
-   <fieldset>
-       <legend>login</legend>
+  <form action="#" method="post" class="formlogin">
+    <fieldset>
+      <legend>login</legend>
 
-       <label for="user"> Digite o seu usuario</label>
-       <input type="text" class="user" name="user">
+      <label for="user"> Digite o seu usuario</label>
+      <input type="text" class="user" name="user">
 
-       <label for="pass">Digite sua senha</label>
-       <input type="password" class="pass" name="pass">
+      <label for="pass">Digite sua senha</label>
+      <input type="password" class="pass" name="pass">
 
-       <input type="submit" value="logar" class="btn">
+      <input type="submit" value="logar" class="btn">
 
-   </fieldset>
-</form>
-    
+    </fieldset>
+  </form>
+
 </body>
+
 </html>
