--- a/ProjectGame/Mario/index.html
+++ b/ProjectGame/Mario/index.html
@@ -1,16 +1,20 @@
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <title>Mario Kaboom.js</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-    </style>
-  </head>
-  <body>
-    <script src="js/kaboom.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Mario Kaboom.js</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+
+  </style>
+</head>
+
+<body>
+  <script src="js/kaboom.js"></script>
+  <script src="js/script.js"></script>
+</body>
+
 </html>
