--- a/index.html
+++ b/index.html
@@ -1,86 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
-	<title>Dante | Projetos Web</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="theme-color" content="#000">
-	<link rel="stylesheet" href="style.css">
+  <title>Dante | Projetos Web</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#000">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<main>
-		<div class="content">
-			<div class="folder">
-				<div class="title">
-					<p>
-						<img class="icon" src="img/folder.svg">
-						Programação Web
-					</p>
-				</div>
-				<div class="item">
-					<a href="ProgramacaoWeb/Curso-Web-Fundamentos/index.html">
-						<img class="icon" src="img/file-lines.svg">
-						Web-fundamentos
-					</a>
-				</div>
-				<div class="item">
-					<a href="ProgramacaoWeb/Fashion/index.html">
-						<img class="icon" src="img/file-lines.svg">
-						Fashion
-					</a>
-				</div>
-				<div class="item">
-					<a href="ProgramacaoWeb/Netflix/index.html">
-						<img class="icon" src="img/file-lines.svg">
-						Netflix
-					</a>
-				</div>
-				<div class="item">
-					<a href="ProgramacaoWeb/Tabela/index.html">
-					   <img class="icon" src="img/file-lines.svg">
-				       Tabela
-				    </a>
-				</div>
-				<div class="item">
-					<a href="ProgramacaoWeb/formulario/index.html">
-					   <img class="icon" src="img/file-lines.svg">
-				       formulario
-				    </a>
-				</div>
-				<div class="item">
-					<a href="ProgramacaoWeb/site-header/index.html">
-					   <img class="icon" src="img/file-lines.svg">
-				       Site-header
-				    </a>
-				</div>
-
-
-
-			</div>
-			<div class="folder">
-				<div class="title">
-					<p>
-						<img class="icon" src="img/folder.svg">
-						Project Game
-					</p>
-				</div>
-				<div class="item">
-					<a href="ProjectGame/Mario/index.html">
-						<img class="icon" src="img/file-lines.svg">
-						Mario
-					</a>
-				</div>
-				<div class="item">
-					<a href="ProjectGame/Mario Updated/index.html">
-						<img class="icon" src="img/file-lines.svg">
-						Mario Updated
-					</a>
-				</div>
-			</div>
-		</div>
-	</main>
+  <main>
+    <div class="content">
+      <div class="folder">
+        <div class="title">
+          <p>
+            <img class="icon" src="img/folder.svg">
+            Programação Web
+          </p>
+        </div>
+        <div class="item">
+          <a href="ProgramacaoWeb/Curso-Web-Fundamentos/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            Web-fundamentos
+          </a>
+        </div>
+        <div class="item">
+          <a href="ProgramacaoWeb/Fashion/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            Fashion
+          </a>
+        </div>
+        <div class="item">
+          <a href="ProgramacaoWeb/Netflix/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            Netflix
+          </a>
+        </div>
+        <div class="item">
+          <a href="ProgramacaoWeb/Tabela/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            Tabela
+          </a>
+        </div>
+        <div class="item">
+          <a href="ProgramacaoWeb/Formulario/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            formulario
+          </a>
+        </div>
+        <div class="item">
+          <a href="ProgramacaoWeb/Site-header/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            Site-header
+          </a>
+        </div>
+      </div>
+      <div class="folder">
+        <div class="title">
+          <p>
+            <img class="icon" src="img/folder.svg">
+            Project Game
+          </p>
+        </div>
+        <div class="item">
+          <a href="ProjectGame/Mario/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            Mario
+          </a>
+        </div>
+        <div class="item">
+          <a href="ProjectGame/Mario Updated/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            Mario Updated
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
