mudança de uma letra

--- a/ProgramacaoWeb/Site-header/index.html
+++ b/ProgramacaoWeb/Site-header/index.html
@@ -19,7 +19,7 @@
     </a>
     <h1 class="main-header-title"> Trabalhos e groselhas de <br>
       <strong> Dante </strong>
-      um zé ninguém qualquel <br>
+      um zé ninguém qualquer <br>
       Retirado de <a href=" http://html5up.net" class="main-header-link">html5up.net.</a>
     </h1>
   </header>
