--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
             Site-header
           </a>
         </div>
+        <div class="item">
+          <a href="ProgramacaoWeb/Site-Range/index.html">
+            <img class="icon" src="img/file-lines.svg">
+            Site-Range
+          </a>
+        </div>
       </div>
       <div class="folder">
         <div class="title">
