introduçao de um novo game

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
             Mario Updated
           </a>
         </div>
+        <div class="item">
+          <a href="ProjectGame/jogo da cobrinha/snake.html">
+            <img class="icon" src="img/file-lines.svg">
+            Jogo da cobrinha
+          </a>
+        </div>
       </div>
     </div>
   </main>
