--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="pt-BR">
 
 <head>
-  <title>Dante | Projetos Web</title>
   <meta charset="UTF-8">
+  <title>Dante | Projetos Web</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#000">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,49 +14,49 @@
       <div class="folder">
         <div class="title">
           <p>
-            <img class="icon" src="img/folder.svg">
+            <img alt="Ícone" class="icon" src="img/folder.svg">
             Programação Web
           </p>
         </div>
         <div class="item">
           <a href="ProgramacaoWeb/Curso-Web-Fundamentos/index.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Web-fundamentos
           </a>
         </div>
         <div class="item">
           <a href="ProgramacaoWeb/Fashion/index.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Fashion
           </a>
         </div>
         <div class="item">
           <a href="ProgramacaoWeb/Netflix/index.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Netflix
           </a>
         </div>
         <div class="item">
           <a href="ProgramacaoWeb/Tabela/index.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Tabela
           </a>
         </div>
         <div class="item">
           <a href="ProgramacaoWeb/Formulario/index.html">
-            <img class="icon" src="img/file-lines.svg">
-            formulario
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
+            Formulário
           </a>
         </div>
         <div class="item">
           <a href="ProgramacaoWeb/Site-header/index.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Site-header
           </a>
         </div>
         <div class="item">
           <a href="ProgramacaoWeb/Site-Range/index.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Site-Range
           </a>
         </div>
@@ -65,25 +64,25 @@
       <div class="folder">
         <div class="title">
           <p>
-            <img class="icon" src="img/folder.svg">
+            <img alt="Ícone" class="icon" src="img/folder.svg">
             Project Game
           </p>
         </div>
         <div class="item">
           <a href="ProjectGame/Mario/index.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Mario
           </a>
         </div>
         <div class="item">
           <a href="ProjectGame/Mario Updated/index.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Mario Updated
           </a>
         </div>
         <div class="item">
           <a href="ProjectGame/jogo da cobrinha/snake.html">
-            <img class="icon" src="img/file-lines.svg">
+            <img alt="Ícone" class="icon" src="img/file-lines.svg">
             Jogo da cobrinha
           </a>
         </div>
