--- a/ProjectGame/jogo da cobrinha/snake.html
+++ b/ProjectGame/jogo da cobrinha/snake.html
@@ -1,11 +1,16 @@
-<html>
-    <head>
-        <title>Snake Game</title>
-    </head>
+<!DOCTYPE html>
+<html lang="pt-BR">
 
-    <body>
-      
-        <canvas id="canvas" width="400" height="400"></canvas>
-        <script src="game.js"></script>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Snake Game</title>
+</head>
+
+<body>
+  <canvas id="canvas" width="400" height="400"></canvas>
+  <script src="game.js"></script>
+</body>
+
 </html>
